fix contrast on power-select help text

--- a/app/styles/settings.forms.scss
+++ b/app/styles/settings.forms.scss
@@ -642,7 +642,9 @@ form.input-field--disabled {
   .ember-power-select-option.ember-power-select-option--no-matches-message,
   .ember-power-select-option.ember-power-select-option--search-message {
     padding-left: 0.5rem;
-    color: $gray;
+    color: $gray-light-contrast;
+    font-style: italic;
+    font-weight: 300;
   }
 
   .ember-power-select-option[aria-selected="true"],
